hphp/hack/test/typecheck/memoize/array_of_bad_class2.php
<?hh // strict

class Bar {}

<<__Memoize>>
function some_function(array<Bar> $arg): string {
  return 'hello';
}
